PERSONACHANGEREQUESTAPP/force-app/main/default/objects/Persona__mdt/fields/PermissionSetGroupTrueUp__c.field-meta.xml
<CustomField>
    <fullName>PermissionSetGroupTrueUp__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PermissionSetGroupTrueUp</label>
    <type>Checkbox</type>
</CustomField>