PERSONACHANGEREQUESTAPP/force-app/main/default/objects/Persona__mdt/fields/PermissionSetTrueUp__c.field-meta.xml
<CustomField>
    <fullName>PermissionSetTrueUp__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PermissionSetTrueUp</label>
    <type>Checkbox</type>
</CustomField>