PERSONACHANGEREQUESTAPP/force-app/main/default/objects/Persona__mdt/fields/PublicGroupTrueUp__c.field-meta.xml
<CustomField>
    <fullName>PublicGroupTrueUp__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PublicGroupTrueUp</label>
    <type>Checkbox</type>
</CustomField>