PERSONACHANGEREQUESTAPP/force-app/main/default/objects/Persona__mdt/fields/RoleName__c.field-meta.xml
<CustomField>
    <fullName>RoleName__c</fullName>
    <label>RoleName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>